--- a/style.css
+++ b/style.css
@@ -6,19 +6,40 @@
 
 /* Navbar styling */
 .hoverEffect {
+  position: relative;
+  text-decoration: none;
   border: none;
-  transition: all 0.5s;
+  /* transition: all 0.5s; */
   z-index: 1;
   border-radius: 3px;
   background-color: transparent;
-  color: white;
+  color: #a0a0a0;
   margin-right: 30px;
 }
 
-.hoverEffect:hover {
-  border: 1p0 solid #ffffff4f;
-  box-shadow: 0px 10px 1pc 1px #ffffff46;
+.hoverEffect:after {
+  content: "";
+  position: absolute;
+  background-color: #cfebff;
+  height: 3px;
+  width: 0;
+  left: 0;
+  bottom: -10px;
+  transition: 0.3s;
 }
+
+.hoverEffect:hover {
+  color: white;
+}
+
+.hoverEffect:hover::after {
+  width: 100%;
+}
+
+/* .hoverEffect:hover {
+  box-shadow: 0 4px 0px #ffffff79; */
+/* box-shadow: 0px 0px 1pc 10px #ffffff46; */
+/* } */
 
 .navContent {
   margin-left: 500px;
@@ -37,7 +58,7 @@
 /* Slider content */
 .slideContent,
 .slideSubContent {
-  filter: drop-shadow(1px 1px 5px #000);
+  filter: drop-shadow(1px 1px 50px #000);
 }
 
 /* content styling */
@@ -107,7 +128,7 @@
 }
 
 .footer_section1 img {
-  width: 130px;
+  width: 120px;
 }
 
 .section1_buttonContainer {
@@ -130,36 +151,32 @@
 
 .navigation_container {
   display: grid;
-  /* grid-template-columns: 1fr 1fr 1fr 1fr 1fr; */
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   width: 80%;
   margin: auto;
   gap: 1rem;
-  padding: 3rem 0;
+  padding: 2rem 0 3rem 0;
 }
 
 .link_container {
   display: flex;
   flex-direction: column;
   gap: 5px;
+  margin-bottom: 20px;
 }
 
 .link_container h5 {
-  font-weight: 500;
-  font-size: 15px;
+  font-weight: 600;
+  font-size: 16px;
   margin-bottom: 5px;
-  letter-spacing: 0.8px;
+  letter-spacing: 2px;
 }
 
 .footer_link {
   text-decoration: none;
   color: white;
-  font-size: 12.5px;
-  font-weight: 300;
-}
-
-.footer_link:hover {
-  color: black;
+  font-size: 13px;
+  font-weight: 400;
 }
 
 .section_links_container button {
@@ -171,8 +188,8 @@
   color: white;
   cursor: pointer;
 }
+
 .section_links_container button i {
-  /* color: white; */
   font-size: 13px;
   display: flex;
   /* horizontal / x-axis */
@@ -268,7 +285,7 @@
   }
 
   .content {
-    padding: 30px 100px 50px 100px;
+    padding: 30px 100px 80px 100px;
   }
   .we_offer_card {
     width: 90%;
@@ -319,6 +336,9 @@
     margin-top: 15px;
     margin-bottom: 5px;
   }
+  .navigation_container {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 /* 600 - 0 */
@@ -341,7 +361,7 @@
 /* 500 - 0 */
 @media only screen and (max-width: 500px) {
   .navigation_container {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(1, 1fr);
   }
   .logoGrid {
     padding: 20px 50px 20px 50px;
